--- a/src/WebAPPs/SPA/Blazor.WASM/wwwroot/css/app.css
+++ b/src/WebAPPs/SPA/Blazor.WASM/wwwroot/css/app.css
@@ -58,7 +58,7 @@ app {
         font-size: 1.1rem;
     }
 
-    .sidebar .oi {
+    .sidebar .m-icon {
         width: 2rem;
         font-size: 1.1rem;
         vertical-align: text-top;
