Localizer namespace added

--- a/src/WebAPPs/SPA/Blazor.WASM/_Imports.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/_Imports.razor
@@ -15,6 +15,7 @@
 @using Fluxor.Blazor
 @using Fluxor.Blazor.Web
 @using Fluxor.Blazor.Web.Components
+@using AKSoftware.Localization.MultiLanguages
 @using HomeAPP.WebAPPs.SPA.Blazor.WASM
 @using HomeAPP.WebAPPs.SPA.Blazor.WASM.Pages
 @using HomeAPP.WebAPPs.SPA.Blazor.WASM.Shared
