sidebar replaced with header and content margin and padding set to max

--- a/src/WebAPPs/SPA/Blazor.WASM/Shared/Layouts/MainLayout.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Shared/Layouts/MainLayout.razor
@@ -1,11 +1,11 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="sidebar">
+<header>
     <NavMenu />
-</div>
+</header>
 
 <div class="main">
-    <div class="content px-4">
+    <div class="content px-4 pt-5 mt-5">
         @Body
     </div>
 </div>
