Settings icon in the navbar container added

--- a/src/WebAPPs/SPA/Blazor.WASM/Shared/Settings/SettingsContainer.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Shared/Settings/SettingsContainer.razor
@@ -1,6 +1,6 @@
 ﻿@inject NavigationManager NavManager
 
-<div class="settings-container" @onclick="() => NavigateToSettings()">
+<div class="settings-container" @onclick="() => NavigateToSettings()" style="color:white">
     <MatIcon Icon="@MatIconNames.Settings" />
 </div>
 
