--- a/src/WebAPPs/SPA/Blazor.WASM/_Imports.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/_Imports.razor
@@ -9,7 +9,7 @@
 @using Microsoft.AspNetCore.WebUtilities
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.JSInterop
-@using BlazorPro.BlazorSize
+@using BlazorPro.Spinkit
 @using MatBlazor
 @using Fluxor
 @using Fluxor.Blazor
@@ -17,8 +17,9 @@
 @using Fluxor.Blazor.Web.Components
 @using AKSoftware.Localization.MultiLanguages
 @using HomeAPP.WebAPPs.SPA.Blazor.WASM
+@using HomeAPP.WebAPPs.SPA.Blazor.WASM.Utilities.ServerValidation
 @using HomeAPP.WebAPPs.SPA.Blazor.WASM.Pages
 @using HomeAPP.WebAPPs.SPA.Blazor.WASM.Shared
 @using HomeAPP.WebAPPs.SPA.Blazor.WASM.Shared.Layouts
 @using HomeAPP.WebAPPs.SPA.Blazor.WASM.Shared.NavMenu
-@using HomeAPP.WebAPPs.SPA.Blazor.WASM.Shared.Spinner
+@using HomeAPP.WebAPPs.SPA.Blazor.WASM.Services.Repositories.Abstractions
