--- a/src/WebAPPs/SPA/Blazor.WASM/Shared/NavMenu/NavMenu.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Shared/NavMenu/NavMenu.razor
@@ -7,7 +7,7 @@
         <a class="navbar-brand text-light align-self-baseline" href="/">@LocalizationService.Keys["GLOBAL_BRANDNAME"]</a>
         
         <button class="navbar-toggler" @onclick="ToggleNavMenu" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="@LocalizationService.Keys["NavMenu_ToogleButtonLabel"]">
+                aria-expanded="false" aria-label="@LocalizationService.Keys["NavMenu_ToggleButtonLabel"]">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="@NavMenuCssClass navbar-collapse d-sm-inline-flex flex-sm-row-reverse">
@@ -19,18 +19,18 @@
                     </NavLink>
                 </div>
 
-                <div class="nav-item dropdown">
-                    <div class="d-flex justify-content-center align-items-center">
+                <div class="nav-item dropdown" @onmouseover="() => SetCollapseServices(false)" @onmouseout="() => SetCollapseServices(true)">
+                    <div class="d-flex justify-content-center align-items-center mb-0">
                         <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/services">
                             @LocalizationService.Keys["NavMenu_Services"]
                         </NavLink>
 
-                        <MatIcon Icon="@ServicesDropdownIconClass" Class="text-white" @onclick="ToggleServices" />
+                        <MatIcon Icon="@ServicesDropdownIconClass" Class="text-white" />
                     </div>
                     
                     
 
-                    <div class="dropdown-menu @(collapseServices ? "d-none" : "d-block") text-white background-prim-color">
+                    <div class="dropdown-menu @(collapseServices ? "d-none" : "d-block") text-white background-prim-color mt-0">
                         <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/uniquedev">
                             @LocalizationService.Keys["NavMenu_Services_UniqueDev"]
                         </NavLink>
@@ -52,7 +52,13 @@
                         <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/datadev">
                             @LocalizationService.Keys["NavMenu_Services_Data"]
                         </NavLink>
+                        
+                        <MatDivider />
+
                         <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/techweuse">
+                            @LocalizationService.Keys["NavMenu_Services_TechWeUse"]
+                        </NavLink>
+                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/process-and-strategy">
                             @LocalizationService.Keys["NavMenu_Services_TechWeUse"]
                         </NavLink>
                     </div>
@@ -106,5 +112,5 @@
 
     private void ToggleNavMenu() => collapseNavMenu = !collapseNavMenu;
 
-    private void ToggleServices() => collapseServices = !collapseServices;
+    private void SetCollapseServices(bool value) => collapseServices = value;
 }
