Process and Strategy added

--- a/src/WebAPPs/SPA/Blazor.WASM/Pages/Services/Services.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Pages/Services/Services.razor
@@ -92,12 +92,23 @@
 
                 </ServiceCardComponent>
             </div>
+            
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
-                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="techweuse">
+                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="tech-we-use">
 
                     <Title>@LocalizationService.Keys["Services_ServiceCards_Card8_Title"]</Title>
 
                     <Content>@LocalizationService.Keys["Services_ServiceCards_Card8_Content"]</Content>
+
+                </ServiceCardComponent>
+            </div>
+
+            <div class="mat-layout-grid-cell mat-layout-grid-cell">
+                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="process-and-strategy">
+
+                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card9_Title"]</Title>
+
+                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card9_Content"]</Content>
 
                 </ServiceCardComponent>
             </div>
