Footer added to layout

--- a/src/WebAPPs/SPA/Blazor.WASM/Shared/Layouts/MainLayout.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Shared/Layouts/MainLayout.razor
@@ -1,4 +1,6 @@
-﻿@inherits LayoutComponentBase
+﻿@using HomeAPP.WebAPPs.SPA.Blazor.WASM.Shared.Footer
+
+@inherits LayoutComponentBase
 
 <header>
     <NavMenu />
@@ -9,3 +11,5 @@
         @Body
     </div>
 </div>
+
+<Footer />
