Service paths fixed

--- a/src/WebAPPs/SPA/Blazor.WASM/Pages/Services/Services.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Pages/Services/Services.razor
@@ -30,7 +30,7 @@
     <div class="mat-layout-grid">
         <div class="mat-layout-grid-inner">
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
-                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="uniquedev">
+                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/unique-dev">
 
                     <Title>@LocalizationService.Keys["Services_ServiceCards_Card1_Title"]</Title>
 
@@ -39,7 +39,7 @@
                 </ServiceCardComponent>
             </div>
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
-                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="webdev">
+                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/web-dev">
 
                     <Title>@LocalizationService.Keys["Services_ServiceCards_Card2_Title"]</Title>
 
@@ -48,7 +48,7 @@
                 </ServiceCardComponent>
             </div>
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
-                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="mobiledev">
+                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/mobile-dev">
 
                     <Title>@LocalizationService.Keys["Services_ServiceCards_Card3_Title"]</Title>
 
@@ -57,7 +57,7 @@
                 </ServiceCardComponent>
             </div>
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
-                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="industry40">
+                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/industry-4_0">
 
                     <Title>@LocalizationService.Keys["Services_ServiceCards_Card4_Title"]</Title>
 
@@ -66,7 +66,7 @@
                 </ServiceCardComponent>
             </div>
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
-                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="uxdev">
+                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/ux-dev">
 
                     <Title>@LocalizationService.Keys["Services_ServiceCards_Card5_Title"]</Title>
 
@@ -75,7 +75,7 @@
                 </ServiceCardComponent>
             </div>
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
-                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="aidev">
+                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/ai-dev">
 
                     <Title>@LocalizationService.Keys["Services_ServiceCards_Card6_Title"]</Title>
 
@@ -84,7 +84,7 @@
                 </ServiceCardComponent>
             </div>
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
-                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="datadev">
+                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/data-dev">
 
                     <Title>@LocalizationService.Keys["Services_ServiceCards_Card7_Title"]</Title>
 
@@ -94,7 +94,7 @@
             </div>
             
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
-                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="tech-we-use">
+                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/tech-we-use">
 
                     <Title>@LocalizationService.Keys["Services_ServiceCards_Card8_Title"]</Title>
 
@@ -104,7 +104,7 @@
             </div>
 
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
-                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="process-and-strategy">
+                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/process-and-strategy">
 
                     <Title>@LocalizationService.Keys["Services_ServiceCards_Card9_Title"]</Title>
 
