--- a/src/WebAPPs/SPA/Blazor.WASM/Shared/NavMenu/NavMenu.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Shared/NavMenu/NavMenu.razor
@@ -31,34 +31,35 @@
                     
 
                     <div class="dropdown-menu @(collapseServices ? "d-none" : "d-block") text-white background-prim-color mt-0">
-                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/uniquedev">
+                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/services/unique-dev">
                             @LocalizationService.Keys["NavMenu_Services_UniqueDev"]
                         </NavLink>
-                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/webdev">
+                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/services/web-dev">
                             @LocalizationService.Keys["NavMenu_Services_WebDev"]
                         </NavLink>
-                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/mobiledev">
+                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/services/mobile-dev">
                             @LocalizationService.Keys["NavMenu_Services_MobileDev"]
                         </NavLink>
-                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/industry40">
+                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/services/industry-4_0">
                             @LocalizationService.Keys["NavMenu_Services_Industry40"]
                         </NavLink>
-                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/uxdev">
+                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/services/ux-dev">
                             @LocalizationService.Keys["NavMenu_Services_UX"]
                         </NavLink>
-                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/aidev">
+                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/services/ai-dev">
                             @LocalizationService.Keys["NavMenu_Services_AI"]
                         </NavLink>
-                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/datadev">
+                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/services/data-dev">
                             @LocalizationService.Keys["NavMenu_Services_Data"]
                         </NavLink>
                         
                         <MatDivider />
 
-                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/techweuse">
+                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/services/tech-we-use">
                             @LocalizationService.Keys["NavMenu_Services_TechWeUse"]
                         </NavLink>
-                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/process-and-strategy">
+
+                        <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/services/process-and-strategy">
                             @LocalizationService.Keys["NavMenu_Services_TechWeUse"]
                         </NavLink>
                     </div>
