Footer reference simplified

--- a/src/WebAPPs/SPA/Blazor.WASM/Shared/Layouts/MainLayout.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Shared/Layouts/MainLayout.razor
@@ -1,6 +1,4 @@
-﻿@using HomeAPP.WebAPPs.SPA.Blazor.WASM.Shared.Footer
-
-@inherits LayoutComponentBase
+﻿@inherits LayoutComponentBase
 
 <header>
     <NavMenu />
@@ -12,4 +10,4 @@
     </div>
 </div>
 
-<Footer />
+<HomeAPP.WebAPPs.SPA.Blazor.WASM.Shared.Footer.Footer />
