--- a/src/WebAPPs/SPA/Blazor.WASM/Shared/NavMenu/NavMenu.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Shared/NavMenu/NavMenu.razor
@@ -20,7 +20,7 @@
                 </div>
 
                 <div class="nav-item dropdown" @onmouseover="() => SetCollapseServices(false)" @onmouseout="() => SetCollapseServices(true)">
-                    <div class="d-flex justify-content-center align-items-center mb-0">
+                    <div class="d-flex justify-content-between align-items-center mb-0">
                         <NavLink class="nav-link text-light" Match="NavLinkMatch.All" href="/services">
                             @LocalizationService.Keys["NavMenu_Services"]
                         </NavLink>
